# Stratus

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  2025-08-31-you-are-my-coding-assistant.txt  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  check_database_state.py  coverage.xml  crontab.example  docker-compose.yml  explore_shopify_fields.py  main.py  pyproject.toml  run_etl.py  schedule_etl.py  test_freeagent_client.py  test_shopify_historical_import.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_warehouse_schema.py  0002_add_shopify_tables.py  0003_update_inventory_orders_shipbob.py  0004_add_extended_shipbob_tables.py  0005_add_freeagent_tables.py  0006_add_credit_value_to_freeagent_transactions.py  0007_add_sync_state.py  0008_add_shopify_internal_id_to_orders.py  0009_add_shopify_internal_id_to_orders.py  0010_restructure_to_source_specific_tables.py  0011_enhance_shopify_order_fields.py  0012_add_missing_shopify_fields.py  99bf6edba699_add_shipbob_orders_table.py  c6dfe41e8ea1_add_storefront_column_simple.py  cef743eb2e45_add_missing_freeagent_contact_columns.py
config/: app.yaml  freeagent.yaml
docs/: COMPREHENSIVE_DOCUMENTATION.md  FILE_INVENTORY.md  OAUTH_SETUP_GUIDE.md  PRODUCTION_READINESS_ASSESSMENT.md  QUICK_START_FIXED.md
scripts/: freeagent_oauth_setup.py  refresh_freeagent_token.py
specs/: shipbob-2025-07.txt  shopify_openapi.txt
specs/amzn/: aplusContent_2020-11-01.txt  catalogItemsV0.txt  catalogItems_2020-12-01.txt  catalogItems_2022-04-01.txt  customerFeedback_2024-06-01.txt  easyShip_2022-03-23.txt  fbaInventory.txt  financesV0.txt  index copy.txt  (+16 more)
src/: server.py
systemd/: stratus-etl-daily.service  stratus-etl-daily.timer  stratus-etl-hourly.service  stratus-etl-hourly.timer
tests/: test_amazon_inventory.py  test_amazon_orders.py  test_amazon_settlements.py  test_freeagent_adapter.py  test_freeagent_etl.py  test_shipbob_extended.py  test_shipbob_inventory.py  test_shipbob_status.py  test_shopify_customers.py  test_shopify_orders.py  test_shopify_products.py
(+98 files in other folders)
